Fixed align-text to text-align

--- a/css/hmmstyle.css
+++ b/css/hmmstyle.css
@@ -5,7 +5,7 @@ html {
 a {
   text-decoration: none;
   color: white;
-  align-text: middle;
+  text-align: middle;
 }
 
 p {
